Fix image link unit tests